--- a/DPC++Compiler/vector-add/Makefile.fpga
+++ b/DPC++Compiler/vector-add/Makefile.fpga
@@ -1,32 +1,60 @@
 CXX := dpcpp
-CXXFLAGS = -O2 -g
-SRC := src/vector-add.cpp
+CXXFLAGS = -O2 -g -std=c++17
+
+SRC := src/vector-add-buffers.cpp
+USM_SRC := src/vector-add-usm.cpp
 
 .PHONY: fpga_emu run_emu clean 
-fpga_emu: vector-add.fpga_emu
-hw: vector-add.fpga
-report: vector-add_report.a
 
-vector-add.fpga_emu: $(SRC)
-	$(CXX) $(USERCXXFLAGS) -fintelfpga $^ -o $@ -DFPGA_EMULATOR
+fpga_emu: vector-add-buffers.fpga_emu
+fpga_emu_usm: vector-add-usm.fpga_emu_usm
+
+hw: vector-add-buffers.fpga
+hw_usm: vector-add-usm.fpga
+
+report: vector-add-buffers_report.a
+report_usm: vector-add-usm_report.a_usm
+
+vector-add-buffers.fpga_emu: $(SRC)
+	$(CXX) $(CXXFLAGS) -fintelfpga $^ -o $@ -DFPGA_EMULATOR=1
+vector-add-usm.fpga_emu_usm: $(USM_SRC)
+	$(CXX) $(CXXFLAGS) -fintelfpga $^ -o $@ -DFPGA_EMULATOR=1
+
 
 a.o: $(SRC)
-	$(CXX) $(USERCXXFLAGS) -fintelfpga -c $^ -o $@ -DFPGA
+	$(CXX) $(CXXFLAGS) -fintelfpga -c $^ -o $@ -DFPGA=1
+a_usm.o: $(USM_SRC)
+	$(CXX) $(CXXFLAGS) -fintelfpga -c $^ -o $@ -DFPGA=1
 
-vector-add.fpga: a.o
-	$(CXX) $(USERCXXFLAGS) -fintelfpga $^ -o $@ -Xshardware
 
-run_emu: vector-add.fpga_emu
-	./vector-add.fpga_emu
-	
-run_hw: vector-add.fpga
-	./vector-add.fpga
+vector-add-buffers.fpga: a.o
+	$(CXX) $(CXXFLAGS) -fintelfpga $^ -o $@ -Xshardware
+vector-add-usm.fpga: a_usm.o
+	$(CXX) $(CXXFLAGS) -fintelfpga $^ -o $@ -Xshardware
+
+run_emu: vector-add-buffers.fpga_emu
+	./vector-add-buffers.fpga_emu
+run_emu_usm: vector-add-usm.fpga_emu_usm
+	./vector-add-usm.fpga_emu_usm
+
+
+run_hw: vector-add-buffers.fpga
+	./vector-add-buffers.fpga
+run_hw_usm: vector-add-usm.fpga
+	./vector-add-usm.fpga
+
 
 dev.o: $(SRC)
-	$(CXX) $(USERCXXFLAGS) -fintelfpga -c $^ -o $@ -DFPGA
+	$(CXX) $(CXXFLAGS) -fintelfpga -c $^ -o $@ -DFPGA=1
+dev_usm.o: $(USM_SRC)
+	$(CXX) $(CXXFLAGS) -fintelfpga -c $^ -o $@ -DFPGA=1
 
-vector-add_report.a: dev.o
-	$(CXX) $(USERCXXFLAGS) -fintelfpga -fsycl-link $^ -o $@ -Xshardware
+
+vector-add-buffers_report.a: dev.o
+	$(CXX) $(CXXFLAGS) -fintelfpga -fsycl-link $^ -o $@ -Xshardware
+vector-add-usm_report.a_usm: dev_usm.o
+	$(CXX) $(CXXFLAGS) -fintelfpga -fsycl-link $^ -o $@ -Xshardware
+
 
 clean:
-	rm -rf *.o *.d *.out *.mon *.emu *.aocr *.aoco *.prj *.fpga_emu vector-add.fpga *.a
+	rm -rf *.o *.d *.out *.mon *.emu *.aocr *.aoco *.prj *.fpga_emu *.fpga_emu_buffers vector-add-buffers.fpga  vector-add-usm.fpga *.a
